<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.kawakawaplanning.onenightwerewolf.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/werewolf"
                        app:fontFile="mplus-1c-light.ttf"
                        android:textColor="@color/textColorPrimary" />

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        app:fontFile="mplus-1c-regular.ttf"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/werewolfTv" />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="1"
                        android:id="@+id/werewolfSb"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/seer"
                        app:fontFile="mplus-1c-light.ttf"
                        android:textColor="@color/textColorPrimary"/>

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        app:fontFile="mplus-1c-regular.ttf"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/seerTv" />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="2"
                        android:id="@+id/seerSb"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/robber"
                        app:fontFile="mplus-1c-light.ttf"
                        android:textColor="@color/textColorPrimary"
                        />

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        app:fontFile="mplus-1c-regular.ttf"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/robberTv"
                         />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="1"
                        android:id="@+id/robberSb"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/minion"
                        app:fontFile="mplus-1c-light.ttf"
                        android:textColor="@color/textColorPrimary"
                         />

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        app:fontFile="mplus-1c-regular.ttf"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/minionTv"
                         />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="2"
                        android:id="@+id/minionSb"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/tanner"
                        app:fontFile="mplus-1c-light.ttf"
                        android:textColor="@color/textColorPrimary"
                         />

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        app:fontFile="mplus-1c-regular.ttf"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/tannerTv"
                         />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="1"
                        android:id="@+id/tannerSb"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp">

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/villager"
                        app:fontFile="mplus-1c-light.ttf"
                        android:textColor="@color/textColorPrimary"
                         />

                    <net.kianoni.fontloader.TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        app:fontFile="mplus-1c-regular.ttf"
                        android:textColor="@color/textColorPrimary"
                        android:id="@+id/villagerTv"
                         />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="NEXT"
        android:id="@+id/nextBtn"
        android:background="@drawable/next_btn_back"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="16dp" />

</LinearLayout>
